# mpedb

./: .gitignore  BENCHMARKS-GRAPH.md  BENCHMARKS-OLAP.md  BENCHMARKS-ROUTING.md  BENCHMARKS-VECTOR.md  BENCHMARKS.md  C-API-COMPAT.md  CLAUDE.md  COMPAT.md  Cargo.toml  DESIGN-BLOBEXTENT.md  DESIGN-DDL.md  DESIGN-DERIVED-TABLES.md  DESIGN-DROP-TABLE.md  DESIGN-MACOS-LOCK.md  DESIGN-MIRROR-DDL.md  DESIGN-MIRROR.md  DESIGN-MPEE-OPT.md  DESIGN-MULTIDB.md  DESIGN-PHASE3.md  DESIGN-SCHEMA-V2.md  DESIGN-SQLITE-BACKED.md  DESIGN-TRIGGERS.md  DESIGN-WINDOW.md  DESIGN.md  GUIDE.md  INNOVATIONS.md  LANDSCAPE.md  README.md  SQL-EXTENSIONS.md  SQLITE.md  TODO.md  TURSO.md  minisqlite-vs-mpedb.md
crates/mpedb/: Cargo.toml
crates/mpedb-bench/: Cargo.toml  README.md  RESULTS-linux-amd-epyc-milan-2c.md  RESULTS-macos-apple-m3-pro-11c.md  RESULTS.md
crates/mpedb-bench/examples/: mp_writes.rs
crates/mpedb-bench/src/: bulk.rs  dur_compare.rs  eng_mpedb.rs  eng_pg.rs  eng_sqlite.rs  eng_turso.rs  engines.rs  extents.rs  h2h.rs  main.rs  report.rs  util.rs  workloads.rs
crates/mpedb-capi/: Cargo.toml
crates/mpedb-capi/include/: sqlite3.h
crates/mpedb-capi/src/: auth.rs  backup.rs  blob.rs  consts.rs  introspect.rs  lib.rs  sql.rs  udf.rs  valconv.rs
crates/mpedb-capi/tests/: attach_ffi.rs  c_smoke.rs  capi.rs  capi_basic.rs  capi_ext.rs  capi_more.rs  dbapi_battery.py  dbapi_extra.py  py_preload.rs  py_sqlite3_preload.py  ring_forfeit.rs  smoke.c  smoke.py
crates/mpedb-capi/workbench/: README.md  run.sh
crates/mpedb-capi/workbench/djsuite/: diff_arms.py  probe_answers.py  run_suite.sh  settings.py
crates/mpedb-capi/workbench/proj/: manage.py  settings.py
crates/mpedb-cli/: Cargo.toml
crates/mpedb-cli/src/: args.rs  bench.rs  blob.rs  collide.rs  crash.rs  csvload.rs  dump.rs  line.rs  main.rs  mirror.rs  mirror_collide.rs  openpath.rs  powerloss.rs  powerloss_commit.rs  proc_cmd.rs  queue.rs  queue_collide.rs  render.rs  repl.rs  stress.rs  tier.rs  util.rs
crates/mpedb-cli/tests/: cli.rs  proc_cli.rs  queue_cli.rs
crates/mpedb-core/: Cargo.toml
crates/mpedb-core/src/: btree.rs  cdc.rs  engine.rs  lib.rs  os.rs  pagestore.rs  plsim.rs  ring.rs  row.rs  shm.rs  wasmcompat.rs
crates/mpedb-core/src/engine/: commit.rs  debug_tests.rs  extent.rs  freelist.rs  fts.rs  mod.rs  read.rs  tests.rs  write.rs
crates/mpedb-core/tests/: high_water_leak.rs  reload_failure_releases_lock.rs
crates/mpedb-graphbench/: Cargo.toml
crates/mpedb-graphbench/src/: main.rs  neo4j.rs
crates/mpedb-mirror/: Cargo.toml
crates/mpedb-mirror/src/: adapt.rs  adapter.rs  apply.rs  conflicts.rs  export.rs  import.rs  lib.rs  pg.rs  pg_adapter.rs  pg_export.rs  pg_harness.rs  pg_import.rs  pg_track.rs  preflight.rs  push.rs  reconcile.rs  regenerate.rs  resolve.rs  sourcecfg.rs  sqlite.rs  sqlite_adapter.rs  sqlite_track.rs  state.rs  switch.rs
crates/mpedb-mirror/tests/: concurrent_load.rs  echo_loop.rs  sqlite_specials.rs
crates/mpedb-olapbench/: Cargo.toml
crates/mpedb-olapbench/src/: cell.rs  eng_duckdb.rs  eng_mpedb.rs  eng_mysql.rs  eng_postgres.rs  eng_sqlite.rs  main.rs  queries.rs  schema.rs
crates/mpedb-proc/: Cargo.toml
crates/mpedb-proc/src/: emit.rs  engine.rs  hash.rs  interp.rs  ir.rs  lib.rs  py.rs  reject_tests.rs  rs.rs
crates/mpedb-proc/tests/: hash_prefix.rs  near_data_bench.rs  proc.rs  trigger_proc.rs
crates/mpedb-py/: Cargo.toml  README.md
crates/mpedb-py/pytest/: test_mpedb.py
crates/mpedb-py/src/: lib.rs
crates/mpedb-routebench/: Cargo.toml
crates/mpedb-routebench/src/: json.rs  main.rs
crates/mpedb-spell/: Cargo.toml
crates/mpedb-spell/src/: emit.rs  hash.rs  interp.rs  ir.rs  lib.rs  parity_tests.rs  py.rs  rs.rs
crates/mpedb-sqlitefmt/: Cargo.toml
crates/mpedb-sqlitefmt/src/: lib.rs  lock.rs  stamp.rs
crates/mpedb-sqlitefmt/tests/: differential.rs  lock.rs  stamp.rs
crates/mpedb-testkit/: Cargo.toml  README.md
crates/mpedb-testkit/src/: diff.rs  lib.rs  pg.rs  slt.rs
crates/mpedb-testkit/tests/: differential.rs  engine_bugs.rs  slt_files.rs
crates/mpedb-testkit/tests/slt/: aggregates.test  any_primary_key.test  basic_crud.test  bool_blob_text.test  comparison_affinity.test  composite_pk.test  compound.test  constraints.test  distinct.test  explain_plans.test  (+15 more)
crates/mpedb-types/: Cargo.toml
crates/mpedb-types/src/: agg.rs  config.rs  error.rs  expr.rs  footprint.rs  fts.rs  ident.rs  keycode.rs  lib.rs  model.rs  policy.rs  schema.rs  value.rs
crates/mpedb-vecbench/: Cargo.toml
crates/mpedb-vecbench/src/: main.rs  qdrant.rs
crates/mpedb-wasm/: Cargo.toml
crates/mpedb-wasm/src/: demo.rs  examples.rs  json.rs  lib.rs
crates/mpedb-wasm/tests/: examples.rs
crates/mpedb/examples/: agg_prof.rs  arm_check.rs  batch_ab.rs  blob_bulk_ab.rs  blob_paths.rs  blob_stream.rs  blob_warm.rs  bulk_only.rs  footprint_index.rs  leak_probe.rs  mem_shapes.rs  mp_writes.rs  mpee_memory.rs  multiproc_check.rs  par_ceiling.rs  registry_cost.rs  sync_cost.rs  wal_size_ab.rs
crates/mpedb/src/: access.rs  advisor.rs  backtest.rs  backup.rs  colseg.rs  costlayer.rs  ddl_apply.rs  derived.rs  exec.rs  lib.rs  model.rs  multifile.rs  opdef.rs  policy_store.rs  registry.rs  ring_exec.rs  risk.rs  session.rs  shard.rs  spellfn.rs  sqlite_attach.rs  sqlite_overlay.rs  stats.rs  stream.rs  testdb.rs  tier.rs  trigger.rs  workspace.rs
crates/mpedb/tests/: access_report.rs  add_column_default.rs  advisor.rs  agg_collate.rs  agg_correlated.rs  agg_correlated_perrow.rs  agg_extra.rs  agg_filter.rs  agg_over_index.rs  agg_stream.rs  agg_stream_mem.rs  aliases.rs  alter_table.rs  analyze_reindex.rs  any_key.rs  any_types.rs  attach_cross_file.rs  backtest.rs  binder_join_scope.rs  bitwise.rs  bool_truthiness.rs  busy_timeout.rs  cast_affinity.rs  collate.rs  collate_column.rs  colseg.rs  colseg_model.rs  colseg_watermark.rs  columnar_advice.rs  columnar_cost.rs  columnar_extent_leak.rs  columnar_maintain.rs  columnar_vecsum.rs  composite_index.rs  compound_subquery.rs  correlated_in.rs  correlated_memo.rs  cost_layer.rs  create_index.rs  create_table.rs  (+95 more)
(+127 files in other folders)
