[workspace]
resolver = "2"
members = [
    "crates/mpedb-types",
    "crates/mpedb-core",
    "crates/mpedb-sql",
    "crates/mpedb",
    "crates/mpedb-sdk",
    "crates/mpedb-proc",
    "crates/mpedb-mirror",
    "crates/mpedb-cli",
    "crates/mpedb-py",
    "crates/mpedb-capi",
    "crates/mpedb-testkit",
    "crates/mpedb-bench",
    "crates/mpedb-sqlitefmt",
]
# mpedb-capi (the libsqlite3-compatible C-API shim) EXPORTS the sqlite3_* symbols,
# so it cannot co-link the bundled sqlite3 that workspace feature-unification pulls
# in (mpedb-cli/-bench enable mpedb/sqlite-checkpoint → rusqlite "bundled"). It is a
# member for shared deps, but excluded from the default set: build/test it standalone
# with `-p mpedb-capi` (mpedb then compiles WITHOUT sqlite), and use
# `--workspace --exclude mpedb-capi` for whole-workspace commands.
default-members = [
    "crates/mpedb-types", "crates/mpedb-core", "crates/mpedb-sql", "crates/mpedb",
    "crates/mpedb-sdk", "crates/mpedb-proc", "crates/mpedb-mirror", "crates/mpedb-cli",
    "crates/mpedb-py", "crates/mpedb-testkit", "crates/mpedb-bench", "crates/mpedb-sqlitefmt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
mpedb-types = { path = "crates/mpedb-types" }
mpedb-core = { path = "crates/mpedb-core" }
mpedb-sql = { path = "crates/mpedb-sql" }
mpedb = { path = "crates/mpedb" }
mpedb-proc = { path = "crates/mpedb-proc" }
mpedb-mirror = { path = "crates/mpedb-mirror" }
libc = "0.2"
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"

[profile.dev]
# Panic/crash backtraces keep full file:line; only debugger *variable* inspection
# is dropped. For a gdb session that needs locals: CARGO_PROFILE_DEV_DEBUG=full.
debug = "line-tables-only"
