[workspace]
resolver = "2"
members = [
    "crates/mpedb-types",
    "crates/mpedb-core",
    "crates/mpedb-sql",
    "crates/mpedb",
    "crates/mpedb-graphbench",
    "crates/mpedb-vecbench",
    "crates/mpedb-sdk",
    "crates/mpedb-proc",
    "crates/mpedb-mirror",
    "crates/mpedb-cli",
    "crates/mpedb-py",
    "crates/mpedb-testkit",
    "crates/mpedb-bench",
    "crates/mpedb-sqlitefmt",
    "crates/mpedb-wasm",
]
# mpedb-capi (the libsqlite3-compatible C-API shim) EXPORTS the sqlite3_* symbols,
# so it cannot co-link the bundled sqlite3 that workspace feature-unification pulls
# in (mpedb-cli/-bench enable mpedb/sqlite-checkpoint → rusqlite "bundled"). Its
# cdylib AND its test binaries both hit that collision.
#
# It used to be a member excluded from `default-members`, which made plain
# `cargo test` safe and left `cargo test --workspace` as a trap: GNU ld tolerated
# the duplicate symbols, rust-lld (the new default) refuses them, so the natural
# command failed with `duplicate symbol: sqlite3_result_error` for anyone on a
# recent toolchain. A trap avoided by discipline is a trap.
#
# It is now EXCLUDED — its own workspace, so the collision is unreachable rather
# than unwise. Build and test it with:
#     cargo test --manifest-path crates/mpedb-capi/Cargo.toml
# (or `cd crates/mpedb-capi && cargo test`), where mpedb compiles WITHOUT sqlite.
# mpedb-olapbench is excluded for a different reason than mpedb-capi: it links a
# bundled DuckDB, whose C++ amalgamation is a multi-minute compile. As a member
# it would put that in front of every `cargo test --workspace` and every CI run,
# to build a benchmark nobody is running at the time.
exclude = ["crates/mpedb-capi", "crates/mpedb-olapbench"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
mpedb-types = { path = "crates/mpedb-types" }
mpedb-core = { path = "crates/mpedb-core" }
mpedb-sql = { path = "crates/mpedb-sql" }
mpedb = { path = "crates/mpedb" }
mpedb-proc = { path = "crates/mpedb-proc" }
mpedb-mirror = { path = "crates/mpedb-mirror" }
libc = "0.2"
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"

[profile.dev]
# Panic/crash backtraces keep full file:line; only debugger *variable* inspection
# is dropped. For a gdb session that needs locals: CARGO_PROFILE_DEV_DEBUG=full.
debug = "line-tables-only"
