[package]
name = "mpedb-capi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "libsqlite3-compatible C-API shim backed by mpedb (ABI-level drop-in)"

[lib]
# Exports the sqlite3 C-API as extern "C" symbols. The cdylib is
# libmpedb_sqlite3.{so,dylib}; LD_PRELOAD it (or link it as libsqlite3) and any
# libsqlite3 consumer talks to mpedb. The rlib lets the in-crate Rust FFI tests
# call the exported functions directly.
name = "mpedb_sqlite3"
crate-type = ["cdylib", "rlib"]

# Its own workspace (the parent `exclude`s it): the shim exports sqlite3_* and
# cannot be linked in the same build as the bundled sqlite3 that the parent's
# feature unification pulls in. Deps are explicit rather than inherited for that
# reason; `mpedb` is the same path-dependency source either way.
[workspace]

[dependencies]
mpedb = { path = "../mpedb" }
libc = "0.2"
