[package]
name = "mpedb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "mpedb command-line tool: REPL, bench, multi-process stress tests"

[[bin]]
name = "mpedb"
path = "src/main.rs"

[dependencies]
mpedb = { workspace = true }
mpedb-core = { workspace = true }
mpedb-proc = { workspace = true }
mpedb-mirror = { workspace = true }
mpedb-types = { workspace = true }
libc = { workspace = true }
# sqlite source for `mirror import` (bundled 3.45, as in mpedb-bench).
postgres = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
