[package]
name = "mpedb-proc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PySpell-style stored procedures for mpedb: host-side parsing, sandboxed content-hashed IR"

[dependencies]
mpedb = { workspace = true }
mpedb-sql = { workspace = true }
mpedb-types = { workspace = true }
# The compile/interpret bottom half, split out (M2) so the facade can run
# stored SQL functions: frontends + IR + interpreter live there.
mpedb-spell = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
# Tests forge hostile/stale registry records through a second engine
# attachment (the facade exposes no raw registry writes, by design).
mpedb-core = { workspace = true }
