[package]
name = "mpedb-routebench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Routing on real road matrices (stage M4, BENCHMARKS-ROUTING.md): mpedb
# stores and serves the instance, the kernel's Held-Karp mode is the exact
# ground truth, and the original MPEE solver (brooom) runs as a SUBPROCESS
# with JSON I/O — no linkage, no shared code, deadline-matched. Std-only for
# the same reason the other bench harnesses are.
[dependencies]
mpedb = { workspace = true }
mpedb-sql = { workspace = true }
