[package]
name = "mpedb-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for mpedb: values, schema, key encoding, expression IR, plan footprints"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
