[package]
name = "mpedb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded multi-process shared-memory database with SQL and content-hashed plans"

[features]
# forward mpedb-core's #37 leak counters; `examples/leak_probe` dumps them
leakstat = ["mpedb-core/leakstat"]
# the sqlite-backed overlay's checkpoint push (DESIGN-SQLITE-BACKED §5): the
# sqlite LIBRARY is the base writer, so this pulls in rusqlite. The CLI
# enables it; library users opt in.
sqlite-checkpoint = ["dep:rusqlite"]

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
# `examples/multiproc_check.rs` forks. Nothing in the library needs libc.
libc = { workspace = true }

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
mpedb-sqlitefmt = { path = "../mpedb-sqlitefmt" }
mpedb-types = { workspace = true }
mpedb-core = { workspace = true }
mpedb-sql = { workspace = true }
