[package]
name = "mpedb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded multi-process shared-memory database with SQL and content-hashed plans"

[features]
# forward mpedb-core's #37 leak counters; `examples/leak_probe` dumps them
leakstat = ["mpedb-core/leakstat"]
# the sqlite-backed overlay's checkpoint push (DESIGN-SQLITE-BACKED §5): the
# sqlite LIBRARY is the base writer, so this pulls in rusqlite. The CLI
# enables it; library users opt in.
sqlite-checkpoint = ["dep:rusqlite"]

[dev-dependencies]
# "functions" lets the differential oracle register a Rust closure as the
# consumer's `regexp()` UDF — the contract behind sqlite's REGEXP operator
# (tests/regexp.rs; the bare library has no regexp() of its own).
rusqlite = { version = "0.31", features = ["bundled", "functions"] }

[dependencies]
# The join gather's budget_fits_in_memory rlimit probe. Already in the tree
# via mpedb-core.
libc = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
mpedb-sqlitefmt = { path = "../mpedb-sqlitefmt" }
mpedb-types = { workspace = true }
mpedb-core = { workspace = true }
mpedb-sql = { workspace = true }
